29 Jul 2003 Fix shared device open to not set `connecting' bit on
            until after parameter verification - Greg Smith
26 Jul 2003 Minor change to codepage conversion logic - Jan Jaeger
21 Jul 2003 CVD fix by Viktor Shkamerda - Jan Jaeger
20 Jul 2003 Defer tuntap32 dll load to device alloc - Jan Jaeger
19 Jul 2003 THDER,THDR instructions - Roger Bowler
18 Jul 2003 NLS translation updates - Jan Jaeger
18 Jul 2003 Fix bug in config.c causing segfault on lcs devices - Fish
18 Jul 2003 Fix race conditions in console detach/close - Jan Jaeger
17 Jul 2003 Allow address:port on CNSLPORT statement - Jan Jaeger
17 Jul 2003 make console threads high priority, remove trylock - Fish
17 Jul 2003 logger_init: 1) consistent stdxxx dup'ing,
            2) make logger_thread high priority - Fish
17 Jul 2003 Bugfix: destroy LOCK & COND in cache_destroy - Fish
16 Jul 2003 Allow specifying a native block device as an FBA
            * Linux only, <2Gb Only - Ivan Warren
15 Jul 2003 Fix s/370 testio race condition - Greg Smith as reported
            by Victor Shkamerda
14 Jul 2003 Fixes for compiler weirdness - Greg Smith
12 Jul 2003 Optimize HDL_FINDNXT call - Jan Jaeger
12 Jul 2003 Correct archmode check in cmpsc and featchk - Jan Jaeger
12 Jul 2003 Restructure service and facility features - Jan Jaeger
11 Jul 2003 Fix bogus HHCCT048E error message - Fish
11 Jul 2003 Fix "console: select: Bad file number" -- 2nd try - Fish
10 Jul 2003 fix tape label issue in hetinit.c & slib.c - Fish
10 Jul 2003 HFP Multiply-Add/Subtract Facility - Roger Bowler
09 Jul 2003 UC Only in status for CTL NO-OP on tape devices - Ivan Warren
09 Jul 2003 added check to configure.ac to ensure dynamic load support
            available if external-gui support requested on win32 - Fish
07 Jul 2003 configure.ac now correctly sets USE_DLLTOOL to false if
            OPTION_DYNAMIC_LOAD not possible (so dyninst/dyngui don't
            get built), and OPTION_DYNAMIC_LOAD and HDL_USE_LIBTOOL