@@ -1,3 +1,4 @@
+01 Aug 2003 Various OMA tape processing fixes - Ivan Warren
 29 Jul 2003 Fix shared device open to not set `connecting' bit on
             until after parameter verification - Greg Smith
 26 Jul 2003 Minor change to codepage conversion logic - Jan Jaeger
